[package]
name = "heapless-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
log-defmt = [ "defmt" ]
log-log = [ "log" ]
defmt = [ "dep:defmt", "heapless/defmt" ]

[dependencies]
heapless = "0.7"

[dependencies.defmt]
version = "0.3"
optional = true

[dependencies.log]
version = "0.4"
optional = true

[dev-dependencies]
tokio = { version = "1", features = [ "full" ]}
pretty_env_logger = "0.4"


